--- a/development.ini
+++ b/development.ini
@@ -13,7 +13,13 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = 
     pyramid_debugtoolbar
+    pyramid_mailer
 
+mail.host = smtp.gmail.com
+mail.port = 587
+mail.username = username@gmail.com
+mail.password = password
+mail.tls = True
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
