modified:   development.ini

--- a/development.ini
+++ b/development.ini
@@ -17,8 +17,8 @@ pyramid.includes =
 
 mail.host = smtp.gmail.com
 mail.port = 587
-mail.username = username@gmail.com
-mail.password = password
+mail.username = slhsith@gmail.com
+mail.password = muchomambo320
 mail.tls = True
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
