modified:   development.ini 	modified:   production.ini

--- a/development.ini
+++ b/development.ini
@@ -17,8 +17,8 @@ pyramid.includes =
 
 mail.host = smtp.gmail.com
 mail.port = 587
-mail.username = slhsith@gmail.com
-mail.password = muchomambo320
+mail.username = name@gmail.com
+mail.password = password
 mail.tls = True
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
@@ -39,7 +39,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, cuorewebpage
+keys = root, pycharm_pyramid
 
 [handlers]
 keys = console
@@ -51,10 +51,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_cuorewebpage]
+[logger_pycharm_pyramid]
 level = DEBUG
 handlers =
-qualname = cuorewebpage
+qualname = pycharm_pyramid
 
 [handler_console]
 class = StreamHandler
