--- a/production.ini
+++ b/production.ini
@@ -27,7 +27,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, cuorewebpage
+keys = root, pycharm_pyramid
 
 [handlers]
 keys = console
@@ -39,10 +39,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_cuorewebpage]
+[logger_pycharm_pyramid]
 level = WARN
 handlers =
-qualname = cuorewebpage
+qualname = pycharm_pyramid
 
 [handler_console]
 class = StreamHandler
