Admin Panel working, can add and update user's titles. Should eventually be replaced with AJAX or some other more permanent solution

--- a/development.ini
+++ b/development.ini
@@ -15,11 +15,11 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_mailer
 
-mail.host = smtp.gmail.com
-mail.port = 587
-mail.username = someone@gmail.com
-mail.password = password
-mail.tls = True
+mail.host = host280.hostmonster.com
+mail.port = 465
+mail.username = info@cuore.io
+mail.password = jh43it87
+mail.ssl = True
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
